// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unset-statement member ast: ast 1`] = `
Object {
  "id": Object {
    "base": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "start": Object {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
      },
      "name": "var",
      "trailingComments": Array [],
      "type": "Identifier",
    },
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": Object {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "member": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 15,
          "line": 1,
          "offset": 14,
        },
        "start": Object {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
      },
      "name": "value",
      "trailingComments": Array [],
      "type": "Identifier",
    },
    "trailingComments": Array [],
    "type": "Member",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "UnsetStatement",
}
`;

exports[`unset-statement member format: format 1`] = `unset var.value;`;

exports[`unset-statement member token 1`] = `
Array [
  unset,
  var,
  .,
  value,
  ;,
]
`;

exports[`unset-statement valuepair ast: ast 1`] = `
Object {
  "id": Object {
    "base": Object {
      "base": Object {
        "base": Object {
          "innerComments": Array [],
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": Object {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "name": "req",
          "trailingComments": Array [],
          "type": "Identifier",
        },
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": Object {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "member": Object {
          "innerComments": Array [],
          "leadingComments": Array [],
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": Object {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
          },
          "name": "http",
          "trailingComments": Array [],
          "type": "Identifier",
        },
        "trailingComments": Array [],
        "type": "Member",
      },
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
        "start": Object {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
      },
      "member": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "start": Object {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
        },
        "name": "Cookie",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "trailingComments": Array [],
      "type": "Member",
    },
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 1,
        "offset": 31,
      },
      "start": Object {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "name": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 32,
          "line": 1,
          "offset": 31,
        },
        "start": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
      },
      "name": "session_id",
      "trailingComments": Array [],
      "type": "Identifier",
    },
    "trailingComments": Array [],
    "type": "ValuePair",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 33,
      "line": 1,
      "offset": 32,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "UnsetStatement",
}
`;

exports[`unset-statement valuepair format: format long 1`] = `unset req.http.Cookie:session_id;`;

exports[`unset-statement valuepair format: format short 1`] = `
unset req
  .http
  .Cookie:session_id;
`;

exports[`unset-statement valuepair token 1`] = `
Array [
  unset,
  req,
  .,
  http,
  .,
  Cookie,
  :,
  session_id,
  ;,
]
`;

exports[`unset-statement variable ast: ast 1`] = `
Object {
  "id": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": Object {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "name": "value",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "UnsetStatement",
}
`;

exports[`unset-statement variable format: format 1`] = `unset value;`;

exports[`unset-statement variable token 1`] = `
Array [
  unset,
  value,
  ;,
]
`;
